fixed the problem with the player spawning in the areas that are stuck, adding the dock as well